hphp/test/slow/use_function/double_alias.php.expectf

Fatal error: Cannot use function foo\bar as bar because the name is already in use in %s/double_alias.php on line 11
